--- a/css/grid.css
+++ b/css/grid.css
@@ -12,6 +12,10 @@
 
 .header {
     grid-area: header;
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
 }
 
 .sidenav {
