--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap');
 
+/* cores */
+
+@import "cores.css";
+
 /* reset */
 
 @import "reset.css";
