--- a/css/reset.css
+++ b/css/reset.css
@@ -21,3 +21,36 @@ li {
 a {
     text-decoration: none;
 }
+
+img {
+    max-width: 100%;
+}
+
+
+/* header */
+.logo {
+    max-width: 200px;
+}
+
+.header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+header nav a {
+    display: block;
+    padding: 10px; 
+    color: white;
+    font-size: 1.125rem;
+    background: rgba(0, 0, 0, .1);
+    border-radius: 5px;
+    transition: .1s;
+}
+
+.header nav a:hover {
+    background: rgba(0, 0, 0, .5);
+}
+
+li + li {
+    margin-left: 30px;
+}
