--- a/css/globais.css
+++ b/css/globais.css
@@ -30,6 +30,74 @@ header nav a {
     margin-left: 30px;
 }
 
+/* content */
+
+.titulo {
+    color: #b07dfb;
+}
+
+.titulo h1 {
+    font-size: 3.75rem;
+    line-height: 1;
+    font-weight: 700;
+}
+
+.titulo span {
+    font-size: 0.975rem;
+    font-style: italic;
+}
+
+p {
+    font-size: 1.2rem;
+    line-height: 1.6;
+    letter-spacing: -0.005rem;
+    color: rgba(0, 0, 0, .7);
+}
+
+.informacoes p + p {
+    margin-top: 30px;
+}
+
+
+
+/* caracteristicas */
+
+.caracteristicas {
+    display: flex;
+    align-items: flex-start;
+}
+
+.caracteristicas > div {
+    width: 80px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+    position: relative;
+}
+
+.caracteristicas span {
+    display: block;
+    color: #b07dfb;
+}
+
+.caracteristicas > div:first-child {
+    margin-right: 30px;
+}
+
+.numero {
+    color: #b07dfb;
+    font-size: 3rem;
+    line-height: 1;
+    margin: 10px  auto;
+}
+
+.rotulo {
+    background: white;
+    border-radius: 0 0 5px 5px;
+    padding: 5px 0;
+    position: relative;
+    top: 2px;
+}
 
 
 
