--- a/css/grid.css
+++ b/css/grid.css
@@ -10,6 +10,33 @@
     ;
 }
 
+@media (max-width: 1200px) {
+    .estrutura {
+        grid-template-areas:  
+        "header header header"
+        "sidenav content content"
+        "sidenav anuncios anuncios"
+        "footer footer footer"
+        
+        ;
+    }
+}
+
+
+@media (max-width: 760px){
+    
+    .estrutura {
+        grid-template-columns: 100%;
+        grid-template-areas: 
+        "header"
+        "sidenav"
+        "content"
+        "anuncios"
+        "footer"
+        ;
+    }
+}
+
 .header {
     grid-area: header;
     padding: 30px;
