--- a/css/grid.css
+++ b/css/grid.css
@@ -45,10 +45,65 @@
     align-items: center;
 }
 
+@media (max-width: 760px) {
+    .header {
+        grid-template-columns: auto;
+    }
+
+    .logo {
+        margin-bottom: 20px;
+    }
+
+    .header nav a {
+        font-size: 1rem;
+    }
+
+    .header li + li {
+        margin-left: 10px;
+    }
+}
+
 .sidenav {
     grid-area: sidenav;
     background: #fafbfc;
     padding: 30px;
+}
+
+@keyframes seta {
+    from {
+        right: 30px;
+    }to {
+        right: 20px;
+    }
+}
+
+@media (max-width: 760px) {
+    .sidenav  ul {
+        display: flex;
+    }
+
+    .sidenav ul li {
+        flex: 1 0 60px;
+    }
+
+    .sidenav {
+        position: relative;
+        overflow-x: auto;
+        padding: 0 30px;
+    }
+
+    .sidenav::after {
+        content: "→";
+        position: absolute;
+        top: 5px;
+        right:30px;
+        color: rgba(0, 0, 0, .3);
+        animation: seta .5s ease-in 0s infinite alternate;
+    }
+
+    .sidenav ul li a  {
+        margin: 30px 30px 30px 0;
+    }
 }
 
 .content {
