--- a/css/grid.css
+++ b/css/grid.css
@@ -116,6 +116,12 @@
     gap: 30px;
 }
 
+@media (max-width:600px) {
+    .content {
+        grid-template-columns: auto;
+    }
+}
+
 .coluna-wide {
     grid-column: 1/-1;
 }
@@ -136,6 +142,7 @@
     align-content: start;
     padding: 30px;
     gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 .footer {
